--- a/templates/register.html
+++ b/templates/register.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Register </title>
-</head>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<body>
+{% extends "layout.html" %}
+
+{% block title %}Register{% endblock %}
+
+{% block body %}
 <div class="container">
     <div class="row">
 
@@ -29,5 +24,4 @@
          </div>
     </div>
 </div>
-</body>
-</html>
+{% endblock %}
